--- a/entry-1.html
+++ b/entry-1.html
@@ -7,19 +7,16 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Interaction</title>
+        <title>Entry 1</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body style="background-color: rgb(194, 236, 229);">
+    <body style="background-color: aquamarine;">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-            <h1 style="color: teal;">Harmonic Collection</h1>
-             <ul>
-                    <a href="entry-1.html">Entry 1</a>
-                </ul>
+            <h1 style="font-family: 'Courier New', Courier, monospace;" style="text-align: center;">Entry 1</h1>
         <script src="" async defer></script>
     </body>
 </html>
