--- a/entry-1.html
+++ b/entry-1.html
@@ -16,7 +16,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-            <h1 style="font-family: 'Courier New', Courier, monospace;" style="text-align: center;">Entry 1</h1>
+            <h1 style="font-family: 'Courier New', Courier, monospace;">Entry 1</h1>
+                <a href="index.html">Main Page</a>
         <script src="" async defer></script>
     </body>
 </html>
