--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
             <h1 style="color: teal;">Harmonic Collection</h1>
              <ul>
-                    <a href="entry-1.html">Entry 1</a>
+                    <a href="entry-1.html"><b>Entry 1</b></a>
                 </ul>
         <script src="" async defer></script>
     </body>
