--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-            <h1 style="color: teal;">Harmonic Collection</h1>
+            <h1 style="color: teal;text-indent: 1cm;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Harmonic Collection</h1>
              <ul>
-                    <a href="entry-1.html"><b>Entry 1</b></a>
+                    <a href="entry-1.html"><p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: dimgrey;"><b>Entry 1</b></p></a>
                 </ul>
         <script src="" async defer></script>
     </body>
