--- a/entry-1.html
+++ b/entry-1.html
@@ -12,12 +12,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body style="background-color: aquamarine;">
+    <body style="background-color: rgb(221, 248, 239);">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-            <h1 style="font-family: 'Courier New', Courier, monospace;">Entry 1</h1>
-                <a href="index.html">Main Page</a>
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif;text-indent: 1cm;color: darkmagenta;">Entry 1</h1>
+            <ul>
+                <a href="index.html"><p style="font-family: Verdana, Geneva, Tahoma, sans-serif;color: grey;"><i>Homepage</p></a>
+            </ul>   
         <script src="" async defer></script>
     </body>
 </html>
