--- a/entry-1.html
+++ b/entry-1.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -12,14 +8,179 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body style="background-color: rgb(221, 248, 239);">
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif;text-indent: 1cm;color: darkmagenta;">Entry 1</h1>
+    <body>
+
+            <h1>Loneliness & Grief</h1>
+            <a href="index.html">Main Page</a>
+        <p>
+            <strong>Loneliness</strong> is an unpleasant emotional response to perceived isolation, often due to a lack of connection and intimacy. It is a <em>psychological mechanism</em> that motivates people to seek social connection. However, loneliness is distinct from physical separation, as not everyone who is socially isolated feels lonely. Loneliness can be experienced even when surrounded by others. It can be caused by various factors, including genetic inheritance, cultural influences, lack of meaningful relationships, significant loss, dependency on technology, among others.
+        </p>
+        
+        <p>
+            Most people experience loneliness at some point in their lives, and some feel it more frequently. Studies show that loneliness is more prevalent among young people aged 16 to 24 and adults over the age of 75. While <strong><em>transient loneliness</em></strong> can have positive effects, such as strengthening personal relationships, <strong><em>chronic loneliness</em></strong> is often linked to negative effects, including obesity, substance abuse disorders, depression, cardiovascular diseases, high blood pressure and cholesterol, and increased suicidal ideation. Treatments for loneliness include therapy, antidepressants, and efforts to increase social interactions through group activities like exercise, religious events, reconnecting with old friends, adopting pets, or staying connected to a community.
+        </p>
+
+            <h2>Causes of loneliness</h2>
+
+                <h3>Existential causes</h3>
+
+                <p>
+                    Loneliness has long been viewed as a universal condition that, to some degree, is felt by everyone. From this perspective, some level of loneliness is inevitable since, given the limitations of human life, it is impossible for someone to continuously fulfill their need for connection. Essays and books have explored the existential view of loneliness throughout history. One notable reference is Thomas Wolfe's essay God's Lonely Man, which argues that everyone imagines themselves to be uniquely lonely, even though all people experience loneliness at times. While some argue that finding relief from loneliness can be beneficial, those with an existentialist viewpoint often doubt the complete success of such efforts, as loneliness is seen as inevitable and even beneficial in helping to appreciate the joys of life.
+                </p>
+
+                <h3>Cultural factors</h3>
+
+                <p>
+                    Human culture can be a cause of loneliness in two ways. Migrants, for instance, may experience loneliness due to the absence of their native culture. This is particularly relevant for students from collective cultures studying at universities in English-speaking countries with more individualistic values. Western culture, favoring individualism since the Enlightenment, may contribute to loneliness by prioritizing individual achievements over older communal values.
+                </p>
+
+                <h3>Lack of meaningful relationships</h3>
+
+                <p>
+                    Due to upbringing, traditions, mental health issues, abusive family environments, religious reasons, and other factors, many people find it difficult to build trust in social relationships. This, in turn, affects their ability to know themselves, value themselves, or establish connections with others. Medical and psychological recommendations to socialize with friends and family are often overlooked, especially when there is no one with whom to connect, or when the person lacks the interpersonal skills or knowledge on how to proceed. Over time, repeated failures or rejections due to the lack of social skills may lead to discouragement or apathy. As loneliness rates rise annually among people of all age groups, and given its harmful physical and psychological effects, it has become crucial to find new ways to connect individuals, particularly in a time where much attention is focused on electronic devices.
+                </p>
+
+                <h3>Loss of relationships</h3>
+
+                <p>
+                    Loneliness is a very common, often temporary consequence of the end or grieving of a relationship. The loss of a significant person in one's life often triggers a grieving response. In such situations, one can feel lonely even when in the company of others. This can occur due to the disruption of social circles, sometimes combined with nostalgia from people moving away for work or education.
+                </p>
+
+                <h3>Situational causes</h3>
+
+                <p>
+                    Various events or situations can cause loneliness, especially in combination with certain personality traits in susceptible individuals. For example, an extroverted person is more likely to feel lonely if they live in a sparsely populated area. It can also be caused by events that are expected to alleviate loneliness, such as the birth of a child or getting married—particularly in cases of emotionally distant or unstable marriages. Moreover, loneliness can aggravate pre-existing mental health conditions.
+                </p>
+
+                <h3>Self-perpetuation</h3>
+
+                <p>
+                    In the long term, loneliness can lead to maladaptive social cognition, such as hypervigilance or social awkwardness, which can make it harder for an individual to maintain existing relationships or establish new ones. Studies have shown that the most effective way to intervene and reduce loneliness is through targeted therapy, although this does not work for everyone.
+                </p>
+
+                <h3>Social contagion</h3>
+
+                <p>
+                    Loneliness can spread through social groups like a disease, often using maladaptive cognition that results from chronic loneliness. For example, if someone loses a friend for any reason, it may increase their loneliness, causing them to develop excessive neediness or suspicion toward remaining friends, which can lead to further loss of connections. When these remaining friends then experience loneliness, it can create a domino effect. However, studies show this is not a consistent effect, as people who lose friends sometimes form new relationships or deepen existing ones.
+                </p>
+
+                <h3>The internet</h3>
+
+                <p>
+                    Studies have found a moderate correlation between extensive internet use and loneliness, particularly in studies conducted in the 1990s before the internet became widespread. There are contradictory findings about whether lonely people are more drawn to the internet or if the internet causes loneliness. The displacement hypothesis suggests that some individuals withdraw from real-world interactions to spend more time online. Excessive internet use can directly contribute to anxiety, depression, and conditions linked to loneliness. However, these effects may be offset by the internet's ability to facilitate interaction and empower individuals. More recent studies (as of 2015) have found a bidirectional relationship between loneliness and internet use, although moderate internet use—especially by those who actively engage with others rather than passively consuming content—can increase social connection and reduce loneliness.
+                </p>
+
+                <h3>Genetics</h3>
+
+                <p>
+                    Preliminary studies have suggested that loneliness may have a hereditary component. In 2016, a genome-wide study found that about 20% of loneliness could be attributed to genetic factors, suggesting that genes, while contributing to the condition, are a minor cause compared to individual experiences and environment.
+                </p>
+
+                <h3>Other causes</h3>
+
+                <p>
+                    People who take long road trips often report dramatically high feelings of loneliness, which can negatively affect their health.
+                </p>
+
+            <h2>Typologies of loneliness</h2>
+
             <ul>
-                <a href="index.html"><p style="font-family: Verdana, Geneva, Tahoma, sans-serif;color: grey;"><i>Homepage</p></a>
-            </ul>   
-        <script src="" async defer></script>
-    </body>
+                <li>
+                    <p>
+                        <strong>Social and emotional loneliness:</strong>
+                        This distinction was made by Robert S. Weiss in 1973 in his book Loneliness: The Experience of Emotional and Social Isolation. Weiss stated that “both types of loneliness must be examined independently because satisfying the need for emotional solitude cannot offset social loneliness, and vice versa." Professionals working to treat or understand loneliness have had to address these two types separately, although this is not always the case.
+                    </p>
+                </li>
+
+                    <ul>
+                        <li>
+
+                            <p>
+                                <strong>Social loneliness:</strong> 
+                                This is experienced by individuals who lack a broad social network. They may not feel like members of a community or have friends or allies they can rely on during times of distress.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Emotional loneliness:</strong>
+                                Emotional loneliness results from the absence of deep and enriching relationships with others. Weiss linked this concept to attachment theory. Individuals with a need for deep bonds are often satisfied by close family members, such as parents, and later by romantic partners. In 1977, Enrico DiTomasso and Barry Spinner further divided emotional loneliness into romantic and familial loneliness. In 2019, it was found that emotional loneliness significantly increased the likelihood of death for older adults living alone.
+                            </p>
+                        </li>
+                            <ul>
+                                <li>
+                                    <p>
+                                        <strong>
+                                        Familial loneliness:
+                                        </strong>
+                                        This occurs when individuals feel they lack close bonds with family members. A 2010 study found that only familial loneliness was associated with an increased frequency of self-harm, not romantic or social loneliness.
+                                    </p>
+                                </li>
+
+                                <li>
+                                    <p>
+                                        <strong>Romantic loneliness:</strong>
+                                        Romantic loneliness may be experienced by adolescents and adults who lack a close relationship with a romantic partner. Psychologists argue that forming a committed romantic relationship is a critical developmental task for young adults, although many are delaying this until their late 20s or beyond. People in romantic relationships tend to report less loneliness than single individuals, as long as their relationship provides emotional intimacy. However, those in unstable or emotionally distant relationships may still experience romantic loneliness.
+                                    </p>
+                                </li>
+                            </ul>
+
+                    <li>
+                        <p>
+                            <strong>Other types of loneliness:</strong>
+                            Other typologies include existential loneliness, cosmic loneliness (feeling alone in a hostile universe), and cultural loneliness, often found among immigrants who miss their native culture. These types are less studied than the distinction between social, romantic, and familial loneliness but may be valuable for understanding the experiences of certain subgroups.
+                        </p>
+                    </li>
+                    </ul>
+            </ul>
+
+            <h2>Differentiating loneliness from social isolation</h2>
+            <p>
+                There is a distinction between feeling lonely and being socially isolated. One way to think about loneliness is as a discrepancy between desired and actual levels of social interaction, while social isolation refers simply to a lack of contact with others. Loneliness is a subjective, multidimensional experience; if a person feels lonely, then they are lonely. People can feel lonely while alone or in a crowd. A person feels lonely when their perceived need for more or certain types of social interaction is not currently being met. Conversely, one can be alone and not feel lonely; without anyone around, one may not feel lonely if there is no desire for social interaction. It has been suggested that each person has their own optimal level of social interaction, and having too little or too much can lead to feelings of loneliness or overstimulation.
+            </p>
+            <ol>
+                <li>
+                    <p>
+                        <strong>Transient vs. chronic loneliness:</strong>
+                        Another important typology focuses on the temporal perspective. In this context, loneliness can be viewed as either transient or chronic.
+                    </p>
+                </li>
+                <ol>
+                    <li>
+                        <p>
+                            <strong>Transient loneliness:</strong>
+                            is temporary and usually easy to alleviate. For example, when someone is sick and unable to socialize, this would be a case of transient loneliness. Once they recover, their loneliness would likely be easily alleviated.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <strong>Chronic loneliness:</strong>
+                            on the other hand, is more permanent and not easily relieved. A person experiencing long-term feelings of loneliness, regardless of whether they are in a family gathering or with friends, is experiencing chronic loneliness.
+                        </p>
+                    </li>
+                </ol>
+            </ol>
+
+
+            <h2>Positive effects of loneliness</h2>
+            <p>
+                Loneliness can have positive effects on individuals. A study found that while time spent alone tends to depress mood and increase feelings of loneliness, it can also improve cognitive states, such as concentration. It can be argued that some individuals seek solitude to discover a more meaningful and vital existence. Moreover, once the period of solitude ends, mood tends to improve significantly. Loneliness is also associated with other positive experiences, such as personal growth, religious experiences, and identity formation, as seen in solitary quests used in coming-of-age rituals for adolescents.
+            </p>
+
+            <h2>Loneliness as a human condition</h2>
+            <p>
+                Existentialist thought views individuality as the essence of the human experience. Each human being comes into the world alone, travels through life as a separate person, and ultimately dies alone. Coping with this, accepting it, and learning to direct our own lives with a degree of grace and satisfaction is part of the human condition.
+            </p>
+
+            <p>
+                Some philosophers, such as Sartre, believe in an "epistemic loneliness" where loneliness is a fundamental part of the human condition due to the paradox between the desire for meaning and the isolation and meaninglessness of the universe. Conversely, other existentialist thinkers argue that humans engage with one another and the universe actively, and loneliness is merely the sensation of being isolated from this process.
+            </p>
+
+            <p>
+                In his 2019 text, Evidence of Being: The Black Gay Cultural Renaissance and the Politics of Violence, Darius Bost draws on Heather Love's theorization of loneliness to outline how loneliness structures the feelings of Black gay men and their cultural and literary productions. Bost argues: "As a form of negative affect, loneliness underscores the alienation, isolation, and pathologization of Black gay men during the 1980s and early 1990s. But loneliness is also a form of bodily desire, a longing for attachment to the social and for a future beyond the forces that create one's alienation and isolation."
+            </p>
+
+
+
+
+            </body>
 </html>
