--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Interaction</title>
+        <title>Harmonic Collection</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body style="background-color: rgb(194, 236, 229);">
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-            <h1 style="color: teal;text-indent: 1cm;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Harmonic Collection</h1>
-             <ul>
-                    <a href="entry-1.html"><p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: dimgrey;"><b>Entry 1</b></p></a>
-                </ul>
+    <body>
+        <h1>Harmonic Collection</h1>
+            <h2>Lucia Vanegas</h2>
+
+            <a href="entry-1.html">Entry 1</a>
         <script src="" async defer></script>
     </body>
 </html>
