--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -3,15 +3,27 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Entry 1</title>
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+
+        <title>Entry 2</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
-            <h1>Loneliness & Grief</h1>
-            <a href="index.html">Main Page</a>
+            <h1>Loneliness</h1>
+            <h1 id="and">&</h1>
+            <h1 id="line">Grief</h1>
+
+            <a href="../index.html">Main Page</a>
         <p>
             <strong>Loneliness</strong> is an unpleasant emotional response to perceived isolation, often due to a lack of connection and intimacy. It is a <em>psychological mechanism</em> that motivates people to seek social connection. However, loneliness is distinct from physical separation, as not everyone who is socially isolated feels lonely. Loneliness can be experienced even when surrounded by others. It can be caused by various factors, including genetic inheritance, cultural influences, lack of meaningful relationships, significant loss, dependency on technology, among others.
         </p>
