--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     </head>
     <body>
         <h1>Harmonic Collection</h1>
-            <h2>Lucia Vanegas</h2>
-
-            <a href="entry-1.html">Entry 1</a>
+            <h2>
+                <a href="entry-1/index.html">Entry 1</a>
+            </h2>
+            
+            <h2>
+                <a href="entry-2/index.html">Entry 2</a>
+            </h2>
         <script src="" async defer></script>
     </body>
 </html>
