--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -3,27 +3,32 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         
+        <!--Font Zilla Slab-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+        <!--Font Karla-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 
         <title>Entry 2</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+
     </head>
+
     <body>
 
-            <h1>Loneliness</h1>
-            <h1 id="and">&</h1>
-            <h1 id="line">Grief</h1>
+        <h1>Loneliness</h1>
+        <h1 id="and">&</h1>
+        <h1 id="Grief">Grief</h1>
 
-            <a href="../index.html">Main Page</a>
+        <a href="../index.html">Main Page</a>
+        
         <p>
             <strong>Loneliness</strong> is an unpleasant emotional response to perceived isolation, often due to a lack of connection and intimacy. It is a <em>psychological mechanism</em> that motivates people to seek social connection. However, loneliness is distinct from physical separation, as not everyone who is socially isolated feels lonely. Loneliness can be experienced even when surrounded by others. It can be caused by various factors, including genetic inheritance, cultural influences, lack of meaningful relationships, significant loss, dependency on technology, among others.
         </p>
@@ -103,15 +108,14 @@
                         This distinction was made by Robert S. Weiss in 1973 in his book Loneliness: The Experience of Emotional and Social Isolation. Weiss stated that “both types of loneliness must be examined independently because satisfying the need for emotional solitude cannot offset social loneliness, and vice versa." Professionals working to treat or understand loneliness have had to address these two types separately, although this is not always the case.
                     </p>
                 </li>
-
                     <ul>
                         <li>
-
                             <p>
                                 <strong>Social loneliness:</strong> 
                                 This is experienced by individuals who lack a broad social network. They may not feel like members of a community or have friends or allies they can rely on during times of distress.
                             </p>
                         </li>
+
                         <li>
                             <p>
                                 <strong>Emotional loneliness:</strong>
@@ -135,7 +139,6 @@
                                     </p>
                                 </li>
                             </ul>
-
                     <li>
                         <p>
                             <strong>Other types of loneliness:</strong>
@@ -146,9 +149,11 @@
             </ul>
 
             <h2>Differentiating loneliness from social isolation</h2>
+
             <p>
                 There is a distinction between feeling lonely and being socially isolated. One way to think about loneliness is as a discrepancy between desired and actual levels of social interaction, while social isolation refers simply to a lack of contact with others. Loneliness is a subjective, multidimensional experience; if a person feels lonely, then they are lonely. People can feel lonely while alone or in a crowd. A person feels lonely when their perceived need for more or certain types of social interaction is not currently being met. Conversely, one can be alone and not feel lonely; without anyone around, one may not feel lonely if there is no desire for social interaction. It has been suggested that each person has their own optimal level of social interaction, and having too little or too much can lead to feelings of loneliness or overstimulation.
             </p>
+
             <ol>
                 <li>
                     <p>
@@ -156,6 +161,7 @@
                         Another important typology focuses on the temporal perspective. In this context, loneliness can be viewed as either transient or chronic.
                     </p>
                 </li>
+
                 <ol>
                     <li>
                         <p>
@@ -163,6 +169,7 @@
                             is temporary and usually easy to alleviate. For example, when someone is sick and unable to socialize, this would be a case of transient loneliness. Once they recover, their loneliness would likely be easily alleviated.
                         </p>
                     </li>
+
                     <li>
                         <p>
                             <strong>Chronic loneliness:</strong>
@@ -172,13 +179,14 @@
                 </ol>
             </ol>
 
-
             <h2>Positive effects of loneliness</h2>
+
             <p>
                 Loneliness can have positive effects on individuals. A study found that while time spent alone tends to depress mood and increase feelings of loneliness, it can also improve cognitive states, such as concentration. It can be argued that some individuals seek solitude to discover a more meaningful and vital existence. Moreover, once the period of solitude ends, mood tends to improve significantly. Loneliness is also associated with other positive experiences, such as personal growth, religious experiences, and identity formation, as seen in solitary quests used in coming-of-age rituals for adolescents.
             </p>
 
             <h2>Loneliness as a human condition</h2>
+
             <p>
                 Existentialist thought views individuality as the essence of the human experience. Each human being comes into the world alone, travels through life as a separate person, and ultimately dies alone. Coping with this, accepting it, and learning to direct our own lives with a degree of grace and satisfaction is part of the human condition.
             </p>
@@ -190,9 +198,6 @@
             <p>
                 In his 2019 text, Evidence of Being: The Black Gay Cultural Renaissance and the Politics of Violence, Darius Bost draws on Heather Love's theorization of loneliness to outline how loneliness structures the feelings of Black gay men and their cultural and literary productions. Bost argues: "As a form of negative affect, loneliness underscores the alienation, isolation, and pathologization of Black gay men during the 1980s and early 1990s. But loneliness is also a form of bodily desire, a longing for attachment to the social and for a future beyond the forces that create one's alienation and isolation."
             </p>
-
-
-
 
             </body>
 </html>
