--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Libre Baskerville Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+        <!--Eczar Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&display=swap" rel="stylesheet">
+
+        <!--Zilla Slab Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+        <!--Karla Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 
-
         <title>Entry 3</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+
     </head>
+
     <body>
-    <div>
-        <img src="../assets/" alt="">
-    </div>
-       
-       
+        <!--Main Page Link-->
+        <a href="../index.html">Main Page</a>
+
+        <!--Header-->
+        <h1>Loneliness</h1>
+
+        <!--Gallery-->
+        <div class="gallery-container">
+            <div class="gallery">
+                <div class="image-container">
+                    <img src="../assets/family_photos/family_photo_04.jpg" alt="">
+                    <div class="overlay-text">Longing</div>
+                </div>
+                <div class="image-container">
+                    <img src="../assets/family_photos/family_photo_05.jpg" alt="">
+                    <div class="overlay-text">Solitude</div>
+                </div>
+                <div class="image-container">
+                    <img src="../assets/family_photos/family_photo_06.jpg" alt="">
+                    <div class="overlay-text">Disconnection</div>
+                </div>
+                <div class="image-container">
+                    <img src="../assets/family_photos/family_photo_07.jpg" alt="">
+                    <div class="overlay-text">Anguish</div>
+                </div>
+                <div class="image-container">
+                    <img src="../assets/family_photos/family_photo_08.jpg" alt="">
+                    <div class="overlay-text">Melancholy</div>
+                </div>
+                <div class="image-container">
+                    <img src="../assets/family_photos/family_photo_02.jpg" alt="">
+                    <div class="overlay-text">Sadness</div>
+                </div>
+            </div>
+        </div>
+
+
     </body>
 </html>
