--- a/index.html
+++ b/index.html
@@ -16,12 +16,24 @@
                     Sha<span id="r">r</span>ed Isolation
                 </h1>
         </div>
+        <h2>Lucia Vanegas</h2>
         <div class="entries">
-                <a href="../luciav416.github.io/entry-1/index.html" class="entries-child">1</a>
-                <a href="../luciav416.github.io/entry-2/index.html" class="entries-child">2</a>
-                <a href="../luciav416.github.io/entry-3/index.html" class="entries-child">3</a>
+                <!--Lonely in the world - Isolation-->
+                <a href="../luciav416.github.io/entry-2/index.html" class="entries-child">The Nobodies</a>
+                <!--Lonely in the house-->
+                <a href="../luciav416.github.io/entry-1/index.html" class="entries-child">House Taken Over</a>
+                <!--Homesick-->
+                <a href="../luciav416.github.io/entry-3/index.html" class="entries-child">The Land Of Oblivion</a>
                 <a href="../luciav416.github.io/entry-4/index.html" class="entries-child">4</a>
                 <a href="../luciav416.github.io/entry-5/index.html" class="entries-child">5</a>
+                <a href="../luciav416.github.io/entry-6/index.html" class="entries-child">6</a>
+                <a href="../luciav416.github.io/entry-7/index.html" class="entries-child">7</a>
+                <!--
+                <a href="../luciav416.github.io/entry-8/index.html" class="entries-child">8</a>
+                <a href="../luciav416.github.io/entry-9/index.html" class="entries-child">9</a>
+                <a href="../luciav416.github.io/entry-10/index.html" class="entries-child">10</a>
+                -->
+                <script src="script.js"></script>
         </div>
     </body>
 </html>
