--- a/prueba/index.html
+++ b/prueba/index.html
@@ -6,13 +6,16 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!--Casa Tomada-->
-        <!--Collage-->
-        <!--Texto-->
-        <!--Fotos BanRep-->        
+        <div id="cuadro-verde">
+            <div id="cuadro-lila"></div>
+            <div id="cuadro-aguamarina"></div>
+            <div id="cuadro-rosa"></div>
+            <div id="cuadro-gris"></div>
+        </div>
+
         <script src="" async defer></script>
     </body>
 </html>
