--- a/entry-10/index.html
+++ b/entry-10/index.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--Casa Tomada-->
-        <!--Collage-->
-        <!--Texto-->
-        <!--Fotos BanRep-->        
+        <!--Reflexion Final-->
+        <!---->
+        <!--Escrito-->
+        <!--Foto-->        
         <script src="" async defer></script>
     </body>
 </html>
