--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -3,25 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Casa Tomada</title>
-        <!--Font Fleur Display-->
-        <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
+        <!--The Artist Way-->
+        <!--Media Queries-->
+        <!--Escrito-->
+        <!--Fotos NYC-->        
         <script src="" async defer></script>
-            <div class="title-container">
-                <h1 class="hover-title">Casa Tomada</h1>
-            </div>
-
-            <div class="flex-container">
-                <a href="...">1
-                </a>
-                <a href="...">2
-                    
-                </a>
-            </div>
     </body>
 </html>
