--- a/entry-6/index.html
+++ b/entry-6/index.html
@@ -9,10 +9,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--Casa Tomada-->
-        <!--Collage-->
-        <!--Texto-->
-        <!--Fotos BanRep-->        
+        <!--Libro de los sueños-->
+        <!--CSS-->
+        <!--Escrito-->        
         <script src="" async defer></script>
     </body>
 </html>
