--- a/entry-7/index.html
+++ b/entry-7/index.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--Casa Tomada-->
-        <!--Collage-->
-        <!--Texto-->
-        <!--Fotos BanRep-->        
+        <!--La Tierra del Olvido-->
+        <!--Flexbox-->
+        <!--Texto canciones-->
+        <!--Videos-->        
         <script src="" async defer></script>
     </body>
 </html>
